--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,8 @@ dist/
 # ----------------------------
 .DS_Store
 Thumbs.db
+
+# ----------------------------
+# Output directories
+# ----------------------------
+sec_10k_output/
